# CGProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  imgstudio.cbp
Debug/GUI/: Makefile  cmake_install.cmake  gui.cbp
Debug/GUI/nanovg/: Makefile  cmake_install.cmake  nanovg.cbp
Debug/GUI/osdialog/: Makefile  cmake_install.cmake  osdialog.cbp
RelWithDebInfo/: CMakeCache.txt  Makefile  cmake_install.cmake  imgstudio.cbp
RelWithDebInfo/GUI/: Makefile  cmake_install.cmake  gui.cbp
RelWithDebInfo/GUI/nanovg/: Makefile  cmake_install.cmake  nanovg.cbp
RelWithDebInfo/GUI/osdialog/: Makefile  cmake_install.cmake  osdialog.cbp
RelWithDebInfo/openpnp-capture/: Makefile  cmake_install.cmake  openpnp-capture.cbp
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  imgstudio.cbp
Release/GUI/: Makefile  cmake_install.cmake  gui.cbp
Release/GUI/nanovg/: Makefile  cmake_install.cmake  nanovg.cbp
Release/GUI/osdialog/: Makefile  cmake_install.cmake  osdialog.cbp
locale/: pt_BR.csv
openpnp-capture/: CMakeLists.txt
openpnp-capture/linux/: mjpeghelper.cpp  mjpeghelper.h
openpnp-capture/linux/contrib/: stb.cpp
openpnp-capture/win/: platformstream.cpp  platformstream.h
src/: filter.cpp  filter.h  filters.hpp  kernel.cpp  kernel.h  kernels.hpp  main.cpp  node_canvas.cpp  node_canvas.h  stb.c  ui.h
src/gl/core/: log.h
src/gl/glad/: glad.h
src/gl/graphics/: buffer.h  framebuffer.h  shader.h  texture.h
src/nodes/: kernels.hpp  node_logic.cpp  node_logic.h  nodes.hpp  scriptable_node.hpp
test/: distort.isp  nodes.isp  normal_map.lua  normals.isp  script_test.isp  test.isp  test.lua  test2.isp
